snapshot add button

--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -43,7 +43,7 @@
         <div id="body-left">
             <div class="title-box">Schedule</div>
 
-            <div style="display: flex; position:relative; left: 25px;">
+            <div style="display: flex; position:relative; left: 25px; margin-top:10px">
                 <button id="last-button" onclick="lastCalendar()">&#10094;</button>
 
                 <div id="year">January 2021</div>
