--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -6,32 +6,32 @@
 
 <body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
-		<div id="time-stamp"></div>
-		<svg id="under-line" width="1920" height="42">
-			<polyline class="under-line-style" points="0 40 760 40 791 0" />
-			<polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
-		</svg>
-		<svg id="center-top" width="400" height="80">
-			<path
-				d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
-				style="fill:#f3f3f3" />
-		</svg>
-		<div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
-		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
-		<div id="left-menu">
-			<a href="" class="secret-menu">Logbook</a>
-			<a href="" class="secret-menu">Finder</a>
-			<a href="" class="secret-menu">Naming</a>
-			<a href="bab.html">Bab</a>
-			<a href="asset.html">Asset</a>
-		</div>
-		<div id="right-menu">
-			<a href="monitoring.html">Monitoring</a>
-			<a href="schedule.html">Schedule</a>
-			<a href="archive.html">Archive</a>
-			<a href="downloads.html">Download</a>
-			<a href="documents.html">Document</a>
-		</div>
+        <div id="time-stamp"></div>
+        <svg id="under-line" width="1920" height="42">
+            <polyline class="under-line-style" points="0 40 760 40 791 0" />
+            <polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
+        </svg>
+        <svg id="center-top" width="400" height="80">
+            <path
+                d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
+                style="fill:#f3f3f3" />
+        </svg>
+        <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
+        <div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
+        <div id="left-menu">
+            <a href="" class="secret-menu">Logbook</a>
+            <a href="" class="secret-menu">Finder</a>
+            <a href="" class="secret-menu">Naming</a>
+            <a href="bab.html">Bab</a>
+            <a href="asset.html">Asset</a>
+        </div>
+        <div id="right-menu">
+            <a href="monitoring.html">Monitoring</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="archive.html">Archive</a>
+            <a href="downloads.html">Download</a>
+            <a href="documents.html">Document</a>
+        </div>
     </div>
 
     <div style="height:20px"></div>
@@ -42,7 +42,7 @@
         <div id="body-left">
             <div class="title-box">Time Leap</div>
 
-            <div style="display: flex; position:relative; left: 25px;">
+            <div style="display: flex; position:relative; left: 25px; margin-top:10px">
                 <button id="last-button" onclick="lastCalendar()">&#10094;</button>
 
                 <div id="year">January 2021</div>
@@ -609,9 +609,15 @@
         scheduleTitle.classList.add('schedule-day-title');
         scheduleTitle.innerText = timeleapList[i].title;
 
+        var newSnapshotButton = document.createElement('DIV');
+        newSnapshotButton.classList.add('snapshot-new-button');
+        newSnapshotButton.addEventListener('click', function () { createNewSnapshot(timeleapList[i].eventid) });
+        newSnapshotButton.innerText = '+';
+
         scheduleBox.appendChild(scheduleBegin);
         scheduleBox.appendChild(scheduleEnd);
         scheduleBox.appendChild(scheduleTitle);
+        scheduleBox.appendChild(newSnapshotButton);
 
         for (let j = 0; j < timeleapList[i].snapshot.length; j++) {
             let snapshotID = timeleapList[i].snapshot[j].snapshotid;
@@ -622,6 +628,7 @@
             daySchedule.addEventListener('click', function () { snashotRecordList(snapshotID) });
 
             scheduleBox.appendChild(daySchedule);
+
 
             if (heightLineCount > 3) {
                 height = 3 * 23;
@@ -636,8 +643,11 @@
         scheduleBox.style.setProperty('--listBoxHeight', 50 + height + 'px');
         scheduleBox.style.setProperty('--listBoxHeightExpand', 38 + heightLineCount * 23 + 'px');
 
-
         bodyCenterId.appendChild(scheduleBox);
+    }
+
+    function createNewSnapshot(eventID) {
+        alert(eventID);
     }
 
     function snashotRecordList(snapshotID) {
